--- a/public/css/body.css
+++ b/public/css/body.css
@@ -3,6 +3,15 @@
     height: 150px;
     padding: 1.5rem 2rem;
 }
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.form-select {
+    width: 51vw;
+    height: 2rem;
+}
 /* Dashboard */
 .info {
     display: flex;
